distribution/redis-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: cache
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  - port: 16379
    targetPort: 16379
    name: gossip
  selector:
    app: redis-cluster
