distribution/redis-cluster/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: redis-cluster
  name: redis-cluster
  namespace: redis
spec:
  hosts:
  - redis-cluster.redis.svc.cluster.local
  http:
  - name: "client"
    match:
    - port: 6379
    route:
    - destination:
        host: redis-cluster.redis.svc.cluster.local
        port:
          number: 6379
  - name: "gossip"
    match:
    - port: 16379
    route:
    - destination:
        host: redis-cluster.redis.svc.cluster.local
        port:
          number: 16379
